2.6.0 ==================================================================
* т.к. меню разрослось, оно теперь в виде стандартного menubar

2.5.2 ==================================================================
* минимальная ширина алфавитных списков задаётся через set_min_content_with
  (раньше было через set_size_request) виджета Gtk.ScrolledWindow
+ для всех скроллируемых списков принудительно включена видимость
  скроллбаров (вне зависимости от системных настроек GTK)

2.5.1 ==================================================================
* увеличена минимальная ширина алфавитных списков (иначе GTK версий до
  3.20 показывал списки слишком узкими)

2.5.0 ==================================================================
+ добавлена некоторая функциональность из Flibrowser 1.x:
  + поиск по произвольному тексту в полях "имя автора", "название книги",
    "название цикла", поля для ввода значений расположены во вкладке "поиск"
    панели выбора;
    поиск производится по любому вхождению, т.е. не только с начала поля
    (за исключением идентификаторов книг, где проверяется поле целиком);
    поиск производится по всем полям, где введён текст, т.е. книга будет
    отображена в списке при совпадении _всех_ полей;
    при пустых полях ввода поиск производиться не будет;
    в отличие от Flibrowser 1.x, поддержки регулярных выражений нет;
    в отличие от выбора по авторам/циклам, где список подходящих книг
    обновлялся динамически при выборе строки в списке, поиск по тексту
    запускается только кнопкой "искать";
    новый пункт меню "искать" активирует вкладку "поиск" панели выбора;
  + поиск по числовому идентификатору книги
  + поиск по дате - отображаются только книги, добавленные в библиотеку
    в указанном диапазоне дат;
    Внимание! При фильтрации _только_ по датам можно получить очень
    большой список книг, и заполнение списка в основном окне будет
    при этом медленным!
  + в списке книг основного окна теперь отображается столбец с именем