@@ -44,6 +44,24 @@
 
 Всё указанное устанавливается из репозиториев штатными средствами ОС.
 
+Имена необходимых пакетов (номера версий актуальны на февраль 2018 г.):
+
+- Debian/Ubuntu и производные от них дистрибутивы:
+  - python3
+  - python3-gi
+  - python3-gi-cairo
+  - gir1.2-gdkpixbuf-2.0
+  - gir1.2-gtk-3.0
+  - gir1.2-pango-1.0
+
+  Остальное притащится само за счет зависимостей указанных пакетов.
+
+  Если в качестве DE установлен GNOME 3 или его производные, всё перечисленное,
+  скорее всего, уже установлено.
+
+- Fedora: см. выше про GNOME.
+- прочие дистрибутивы: см. документацию по конкретному дистрибутиву.
+
 #### Под Windows
 
 Всё сложнее:
@@ -74,7 +92,7 @@
 
 ### Под Windows
 
-- Win+R, оттуда запустить команду "[каталог-куда-положено\\]pythonw flibrowser2", или
+- Win+R, оттуда запустить команду "[каталог-куда-положено\]pythonw flibrowser2", или
 - создать ярлык с соотв. командой
 
 ## КАК ИСПОЛЬЗОВАТЬ
@@ -88,10 +106,15 @@
    3. Выбрать автора или название цикла в следующем списке.
       Можно сократить список, введя несколько начальных букв имени или
       названия в поле ввода под списком.
+      Дополнительно можно двойным кликом мыши или нажатием кнопки "Enter"
+      на элементе списка пометить выбранный элемент списка как избранный
+      (и далее выбирать соответствующие ему книги, нажимая пункт меню
+      "Книги/Избранные авторы" или "Книги/Избранные циклы").
    4. В списке книг выбрать нужные книги. Список можно сократить, введя
       строку для поиска в поле ввода под списком.
       В отличие от списка авторов, строка ищется в полях "название книги"
       и "название серии/цикла" в любой позиции поля (не только в начале).
+
 2. Поиск по нескольким параметрам:
    1. Выбрать режим "Поиск" в левой панели основного окна.
    2. Заполнить нужные поля.
@@ -117,6 +140,11 @@
 
 Внимание! Если выбран режим именования файлов "Имя автора/...", программа
 создаст подкаталоги с именами авторов.
+
+### ОБНОВЛЕНИЕ БИБЛИОТЕКИ
+
+Если архивы с книгами и индексный файл .inpx были обновлены, следует
+обновить БД, выбрав пункт меню "Файл/Импорт библиотеки".
 
 ### КЛАВИАТУРНЫЕ СОКРАЩЕНИЯ
 
