@@ -1,5 +1,15 @@
 2.6.0 ==================================================================
 * т.к. меню разрослось, оно теперь в виде стандартного menubar
++ в меню "Файл" добавлен забытый со времен тулбара элемент "Импорт
+  библиотеки"
++ в меню "Книги" добавлены подменю "Избранные авторы" и "Избранные циклы"
+  с соответствующими списками;
+  списки изменяются из панелей выбора по авторам и циклам соответственно:
+  элемент списка авторов или циклов добавляется в список избранного или
+  удаляется из него нажатием клавиши "Enter" или двойным кликом левой
+  кнопки мыши;
+  списки избранного хранятся в основной БД
+* исправления и дополнения в README
 
 2.5.2 ==================================================================
 * минимальная ширина алфавитных списков задаётся через set_min_content_with
